--- a/tax.html
+++ b/tax.html
@@ -94,7 +94,7 @@
       </div>
       <div class="status">
         <div class="muted">Status:</div>
-        <div class="pill">ACTIVE</div>
+      <a class="pill live" href="./tax-status.html" id="taxStatusLink">Status: ACTIVE</a>
       </div>
     </div>
 
