--- a/tax.html
+++ b/tax.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore Executive Control Center — Tax Network</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.css">
   <style>
     .wrap{max-width:1200px;margin:0 auto;padding:16px}
     .topline{display:flex;justify-content:space-between;align-items:flex-end;gap:12px;margin-top:10px}
