--- a/approval.html
+++ b/approval.html
@@ -45,18 +45,18 @@
 <div class="wrap">
 
   <!-- NAV -->
-  <nav class="nav">
-    <a href="./index.html">Dashboard</a>
-    <a href="./contract.html">Contract</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./email.html">Email Routing</a>
-    <a class="active" href="./approval.html">Report &amp; Approval</a>
-    <a href="./omni.html">Omni System</a>
-    <a href="./tax.html">Tax Network</a>
-    <a href="./agent.html">Agent AI</a>
-    <a href="./finance.html">Finance</a>
-    <a href="./public.html">Public Portal</a>
-  </nav>
+  <nav class="nav" aria-label="Primary navigation">
+  <a href="./index.html">Dashboard</a>
+  <a href="./contract.html">Contract</a>
+  <a href="./contact.html">Contact</a>
+  <a href="./email.html">Email Routing</a>
+  <a href="./approval.html">Report &amp; Approval</a>
+  <a href="./omni.html">Omni System</a>
+  <a href="./tax.html">Tax Network</a>
+  <a href="./agent.html">Agent AI</a>
+  <a href="./finance.html">Finance</a>
+  <a href="./public.html">Public Portal</a>
+</nav>
 
   <!-- HEADER -->
   <div class="panel">
