--- a/finance.html
+++ b/finance.html
@@ -33,18 +33,18 @@
 <body>
 <div class="wrap">
 
-  <nav class="nav">
-    <a href="./index.html">Dashboard</a>
-    <a href="./contract.html">Contract</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./email.html">Email Routing</a>
-    <a href="./approval.html">Report &amp; Approval</a>
-    <a href="./omni.html">Omni System</a>
-    <a href="./tax.html">Tax Network</a>
-    <a href="./agent.html">Agent AI</a>
-    <a class="active" href="./finance.html">Finance</a>
-    <a href="./public.html">Public Portal</a>
-  </nav>
+  <nav class="nav" aria-label="Primary navigation">
+  <a href="./index.html">Dashboard</a>
+  <a href="./contract.html">Contract</a>
+  <a href="./contact.html">Contact</a>
+  <a href="./email.html">Email Routing</a>
+  <a href="./approval.html">Report &amp; Approval</a>
+  <a href="./omni.html">Omni System</a>
+  <a href="./tax.html">Tax Network</a>
+  <a href="./agent.html">Agent AI</a>
+  <a href="./finance.html">Finance</a>
+  <a href="./public.html">Public Portal</a>
+</nav>
 
   <div class="panel">
     <h1 class="title">FINANCE SHOW — Portfolio View</h1>
