--- a/contract.html
+++ b/contract.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore — Contract Command</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
   <style>
     /* Safe local styling ONLY for this page */
     .wrap{max-width:1100px;margin:0 auto;padding:16px}
