--- a/vaultara-capital.html
+++ b/vaultara-capital.html
@@ -6,8 +6,8 @@
   <title>TitanCore Holdings — Company Dashboard</title>
 
   <!-- IMPORTANT: company pages are inside /companies so go up one level -->
-  <link rel="stylesheet" href="../assets/styles.css">
-  <script defer src="../assets/app.js"></script>
+  <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
 </head>
 
 <body>
@@ -29,14 +29,33 @@
         </div>
       </div>
 
-      <nav class="nav">
-        <a class="navbtn" href="../index.html">Executive Dashboard</a>
-        <a class="navbtn active" href="./titancore-holdings.html">TitanCore</a>
-        <a class="navbtn" href="./vaultara-capital.html">Vaultara</a>
-        <a class="navbtn" href="./vitalpath-care-group.html">VitalPath</a>
-        <a class="navbtn" href="./revmotion-auto-marine.html">RevMotion</a>
-        <a class="navbtn" href="./family-first-equity.html">Family First</a>
-      </nav>
+      <nav class="nav" aria-label="Primary navigation">
+  <a href="/index.html">Dashboard</a>
+  <a href="/contract.html">Contract</a>
+  <a href="/contact.html">Contact</a>
+  <a href="/email.html">Email Routing</a>
+  <a href="/approval.html">Report &amp; Approval</a>
+  <a href="/omni.html">Omni System</a>
+  <a href="/tax.html">Tax Network</a>
+  <a href="/agent.html">Agent AI</a>
+  <a href="/finance.html">Finance</a>
+  <a href="/public.html">Public Portal</a>
+</nav>
+
+<script>
+  // Auto-highlight current page as GREEN button (no manual "active" needed)
+  (function () {
+    const path = (location.pathname || "/index.html").toLowerCase();
+    document.querySelectorAll(".nav a").forEach(a => {
+      const href = (a.getAttribute("href") || "").toLowerCase();
+      if (href === path || (path === "/" && href === "/index.html")) {
+        a.classList.add("active");
+      } else {
+        a.classList.remove("active");
+      }
+    });
+  })();
+</script>
     </header>
 
     <section class="panel">
