--- a/email.html
+++ b/email.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore Executive Control Center — Email Routing</title>
-  <link rel="stylesheet" href="./styles.css" />
+<link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
   <style>
     .wrap{max-width:1200px;margin:0 auto;padding:16px}
     .panel{background:rgba(0,0,0,.35);border:1px solid rgba(212,175,55,.35);border-radius:18px;padding:16px;margin-top:14px}
@@ -34,18 +35,33 @@
 <div class="wrap">
 
   <!-- NAV -->
-  <nav class="nav" aria-label="Primary navigation">
-  <a href="./index.html">Dashboard</a>
-  <a href="./contract.html">Contract</a>
-  <a href="./contact.html">Contact</a>
-  <a href="./email.html">Email Routing</a>
-  <a href="./approval.html">Report &amp; Approval</a>
-  <a href="./omni.html">Omni System</a>
-  <a href="./tax.html">Tax Network</a>
-  <a href="./agent.html">Agent AI</a>
-  <a href="./finance.html">Finance</a>
-  <a href="./public.html">Public Portal</a>
+<nav class="nav" aria-label="Primary navigation">
+  <a href="/index.html">Dashboard</a>
+  <a href="/contract.html">Contract</a>
+  <a href="/contact.html">Contact</a>
+  <a href="/email.html">Email Routing</a>
+  <a href="/approval.html">Report &amp; Approval</a>
+  <a href="/omni.html">Omni System</a>
+  <a href="/tax.html">Tax Network</a>
+  <a href="/agent.html">Agent AI</a>
+  <a href="/finance.html">Finance</a>
+  <a href="/public.html">Public Portal</a>
 </nav>
+
+<script>
+  // Auto-highlight current page as GREEN button (no manual "active" needed)
+  (function () {
+    const path = (location.pathname || "/index.html").toLowerCase();
+    document.querySelectorAll(".nav a").forEach(a => {
+      const href = (a.getAttribute("href") || "").toLowerCase();
+      if (href === path || (path === "/" && href === "/index.html")) {
+        a.classList.add("active");
+      } else {
+        a.classList.remove("active");
+      }
+    });
+  })();
+</script>
   <!-- HEADER -->
   <div class="panel">
     <span class="tag">EMAIL ROUTING — RECORDS ONLY</span>
