--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TitanCore Holdings — Executive Command Center (NUCLEAR)</title>
+  <title>TitanCore Holdings — Executive Command Center </title>
   <style>
     :root{
       --bg:#0b0b0f;
@@ -425,6 +425,7 @@
   <a href="./omni.html">Omni System</a>
   <a href="./tax.html">Tax Network</a>
   <a href="./agent.html">Agent AI</a>
+  <a href="/agentsystem.html">Agent System</a>
   <a href="./finance.html">Finance</a>
   <a href="./public.html">Public Portal</a>
 </nav>
