--- a/index.html
+++ b/index.html
@@ -636,59 +636,59 @@
           </div>
 
           <div style="height:12px"></div>
+          
 
-     EXECUTIVE CONTROL CENTER
-   Bottom Section (Dashboard Only)
-
-<section class="tc-panel">
-  <h2 class="tc-title">EXECUTIVE CONTROL CENTER</h2>
-  <p class="tc-text">
+<!-- ===== EXECUTIVE CONTROL CENTER (Bottom Section) ===== -->
+<section class="panel" style="margin-top:18px;">
+  <div class="section-head">
+    <h2>Executive Control Center</h2>
+    <span class="tag ok">Dashboard Only</span>
+  </div>
+  <p class="muted" style="margin-top:6px;">
     Holding-level command view: actions, risk, authority, and security health.
   </p>
 
-  <div class="tc-cards">
-
-    <div class="tc-card">
-      <div class="tc-card-head">
-        <h3 class="tc-card-title">Executive Action Radar</h3>
-        <a class="tc-open" href="/exec-actions.html">Open</a>
+  <div class="cards">
+    <!-- 1 -->
+    <div class="card">
+      <div class="card-left">
+        <div class="card-title">Executive Action Radar</div>
+        <div class="card-sub">Items requiring CEO or Mantle-level attention across all companies.</div>
+        <div class="card-meta">
+          <span class="pill warn">3 urgent</span>
+          <span class="pill ghost">12 queued</span>
+        </div>
       </div>
-      <p class="tc-card-text">
-        Items requiring CEO or Mantle-level attention across all companies.
-      </p>
-      <div class="tc-meta">
-        <span class="tc-pill tc-pill-warn">3 urgent</span>
-        <span class="tc-pill">12 queued</span>
-      </div>
+      <a class="btn ghost" href="./exec-actions.html">Open</a>
     </div>
 
-    <div class="tc-card">
-      <div class="tc-card-head">
-        <h3 class="tc-card-title">Portfolio Risk & Compliance</h3>
-        <a class="tc-open" href="/risk-compliance.html">Open</a>
+    <!-- 2 -->
+    <div class="card">
+      <div class="card-left">
+        <div class="card-title">Portfolio Risk &amp; Compliance</div>
+        <div class="card-sub">Licenses, tax exposure, audits, regulatory and deadline risks.</div>
+        <div class="card-meta">
+          <span class="pill ok">Controlled</span>
+          <span class="pill ghost">90-day view</span>
+        </div>
       </div>
-      <p class="tc-card-text">
-        Licenses, tax exposure, audits, regulatory and deadline risks.
-      </p>
-      <div class="tc-meta">
-        <span class="tc-pill tc-pill-ok">Controlled</span>
-        <span class="tc-pill">1 flagged</span>
-      </div>
+      <a class="btn ghost" href="./portfolio-risk.html">Open</a>
     </div>
 
-    <div class="tc-card">
-      <div class="tc-card-head">
-        <h3 class="tc-card-title">Authority & Control Monitor</h3>
-        <a class="tc-open" href="/authority-monitor.html">Open</a>
+    <!-- 3 -->
+    <div class="card">
+      <div class="card-left">
+        <div class="card-title">Authority &amp; Control Monitor</div>
+        <div class="card-sub">Governance integrity, role boundaries, approval flow health.</div>
+        <div class="card-meta">
+          <span class="pill ok">Active</span>
+          <span class="pill ghost">Audit trail</span>
+        </div>
       </div>
-      <p class="tc-card-text">
-        Governance integrity, role boundaries, approval flow health.
-      </p>
-      <div class="tc-meta">
-        <span class="tc-pill tc-pill-ok">Stable</span>
-        <span class="tc-pill">0 conflicts</span>
-      </div>
+      <a class="btn ghost" href="./authority-control.html">Open</a>
     </div>
+  </div>
+</section>
 
   </div>
 </section>
