--- a/index.html
+++ b/index.html
@@ -636,59 +636,49 @@
           </div>
 
           <div style="height:12px"></div>
-          
-
-<!-- ===== EXECUTIVE CONTROL CENTER (Bottom Section) ===== -->
-<section class="panel" style="margin-top:18px;">
-  <div class="section-head">
-    <h2>Executive Control Center</h2>
-    <span class="tag ok">Dashboard Only</span>
+          <!-- RIGHT COLUMN -->
+<div class="panel">
+  <div class="panel-header">
+    <h3 class="panel-title">Executive Control</h3>
+    <span class="tag ok">Holding Level</span>
   </div>
-  <p class="muted" style="margin-top:6px;">
-    Holding-level command view: actions, risk, authority, and security health.
-  </p>
 
-  <div class="cards">
-    <!-- 1 -->
+  <div class="panel-body">
+
     <div class="card">
       <div class="card-left">
         <div class="card-title">Executive Action Radar</div>
-        <div class="card-sub">Items requiring CEO or Mantle-level attention across all companies.</div>
-        <div class="card-meta">
-          <span class="pill warn">3 urgent</span>
-          <span class="pill ghost">12 queued</span>
-        </div>
+        <div class="muted">CEO & Mantle-level actions requiring attention</div>
       </div>
-      <a class="btn ghost" href="./exec-actions.html">Open</a>
+      <a class="btn ok" href="/executive-actions.html">Open</a>
     </div>
 
-    <!-- 2 -->
     <div class="card">
       <div class="card-left">
-        <div class="card-title">Portfolio Risk &amp; Compliance</div>
-        <div class="card-sub">Licenses, tax exposure, audits, regulatory and deadline risks.</div>
-        <div class="card-meta">
-          <span class="pill ok">Controlled</span>
-          <span class="pill ghost">90-day view</span>
-        </div>
+        <div class="card-title">Risk & Compliance Control</div>
+        <div class="muted">Licensing, tax exposure, audits, deadlines</div>
       </div>
-      <a class="btn ghost" href="./portfolio-risk.html">Open</a>
+      <a class="btn warn" href="/risk-compliance.html">Open</a>
     </div>
 
-    <!-- 3 -->
     <div class="card">
       <div class="card-left">
-        <div class="card-title">Authority &amp; Control Monitor</div>
-        <div class="card-sub">Governance integrity, role boundaries, approval flow health.</div>
-        <div class="card-meta">
-          <span class="pill ok">Active</span>
-          <span class="pill ghost">Audit trail</span>
-        </div>
+        <div class="card-title">Authority & Governance</div>
+        <div class="muted">Approval flow & role boundary integrity</div>
       </div>
-      <a class="btn ghost" href="./authority-control.html">Open</a>
+      <a class="btn ghost" href="/authority-control.html">Open</a>
     </div>
+
+    <div class="card">
+      <div class="card-left">
+        <div class="card-title">Security / Access</div>
+        <div class="muted">Permissions, monitoring, access logs</div>
+      </div>
+      <a class="btn ok" href="/security.html">Open</a>
+    </div>
+
   </div>
-</section>
+</div>
 
   </div>
 </section>
