--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
       font-size:12px;
       text-align:center;
     }
+  </style>
+
   <script>
-</script>
     // System time
     function tick(){
       const d = new Date();
