--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="time" id="sysTime">—</div>
       </div>
 
-      <div class="statuspill">ACTIVE</div>
+      <button class="statuspill" id="modeBtn" type="button" style="cursor:pointer;">ACTIVE</button>
     </div>
 
     <!-- TOP MENU (ONLY PLACE for modules) -->
