--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="label">System Time</div>
         <div class="time" id="sysTime">—</div>
       </div 
-      <button class="statuspill" id="modeBtn" type="button" style="cursor:pointer;">ACTIVE</button>
+     <button id="activeToggle" class="tag ok">ACTIVE</button>
       <script>
 </script>
     </div>
