--- a/approval.html
+++ b/approval.html
@@ -53,7 +53,7 @@
   <a href="./approval.html">Report &amp; Approval</a>
   <a href="./omni.html">Omni System</a>
   <a href="./tax.html">Tax Network</a>
-  <a href="./agent.html">Agent AI</a>
+ <a href="/agent-ai-suite.html">Agent A.I. Suite</a>
   <a href="./finance.html">Finance</a>
   <a href="./public.html">Public Portal</a>
 </nav>
